--- a/web/themes/saunacamp/sass/layouts/_header.scss
+++ b/web/themes/saunacamp/sass/layouts/_header.scss
@@ -1,3 +1,19 @@
 .l-header {
-  border-top: 10px solid $main-color-1; 
+  position: relative;
+}
+
+.l-header__left,
+.l-header__right {
+  height: 70%;
+  width: 50%;
+  top: 0;
+  position: absolute;
+}
+.l-header__left {
+  background: linear-gradient(to right bottom, $main-color-1 50%, transparent 50%);
+  left: 0;
+}
+.l-header__right {
+  background: linear-gradient(to left bottom, $main-color-2 50%, transparent 50%);
+  right: 0;
 }
