--- a/web/themes/saunacamp/templates/page.html.twig
+++ b/web/themes/saunacamp/templates/page.html.twig
@@ -63,27 +63,8 @@
       <img src="{{ logo }}" alt="{{ 'Home'|t }}"/>
     </a>
   {% endif %}
-
-  {% if site_name or site_slogan %}
-    <div class="name-and-slogan">
-
-      {# Use h1 when the content title is empty #}
-      {% if title %}
-        <strong class="site-name">
-          <a href="{{ front_page }}" title="{{ 'Home'|t }}" rel="home">{{ site_name }}</a>
-        </strong>
-      {% else %}
-        <h1 class="site-name">
-          <a href="{{ front_page }}" title="{{ 'Home'|t }}" rel="home">{{ site_name }}</a>
-        </h1>
-      {% endif %}
-
-      {% if site_slogan %}
-        <div class="site-slogan">{{ site_slogan }}</div>
-      {% endif %}
-    </div>{# ./name-and-slogan #}
-  {% endif %}
-
+  <div class="l-header__left"> </div>
+  <div class="l-header__right"> </div>
   {{ page.header }}
 </header>
 
