--- a/web/themes/saunacamp/templates/page.html.twig
+++ b/web/themes/saunacamp/templates/page.html.twig
@@ -77,10 +77,9 @@
 
 {{ page.help }}
 
-<main role="main">
-  <a id="main-content" tabindex="-1"></a>{# link is in html.html.twig #}
-
-  <div class="layout-content">
+<main role="main" class="l-main">
+  <div class="l-wrapper">
+    <a id="main-content" tabindex="-1"></a>{# link is in html.html.twig #}
     {{ page.highlighted }}
 
     {{ title_prefix }}
@@ -96,25 +95,14 @@
     {% endif %}
 
     {{ page.content }}
-  </div>{# /.layout-content #}
-
-  {% if page.sidebar_first %}
-    <aside class="layout-sidebar-first" role="complementary">
-      {{ page.sidebar_first }}
-    </aside>
-  {% endif %}
-
-  {% if page.sidebar_second %}
-    <aside class="layout-sidebar-second" role="complementary">
-      {{ page.sidebar_second }}
-    </aside>
-  {% endif %}
-
+  </div>
 </main>
 
 {% if page.footer %}
-  <footer role="contentinfo">
-    {{ page.footer }}
+  <footer role="l-footer">
+    <div class="l-wrapper">
+      {{ page.footer }}
+    </div>
   </footer>
 {% endif %}
 
