--- a/web/themes/saunacamp/templates/page.html.twig
+++ b/web/themes/saunacamp/templates/page.html.twig
@@ -97,6 +97,10 @@
     {{ page.content }}
   </div>
 </main>
+<div class="l-twitter-feed">
+    <a class="twitter-timeline" href="https://twitter.com/saunacampfi" data-widget-id="593468106875494403">Twiittejä käyttäjältä @saunacampfi</a>
+    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+</div>
 
 {% if page.footer %}
   <footer role="l-footer">
