--- a/web/themes/saunacamp/css/styles.css
+++ b/web/themes/saunacamp/css/styles.css
@@ -37,6 +37,15 @@ body {
   text-align: center;
 }
 
+.l-twitter-feed {
+  background-color: #77ae40;
+  padding: 20px 0;
+}
+.l-twitter-feed .twitter-timeline {
+  margin: 0 auto !important;
+  display: block !important;
+}
+
 .l-wrapper {
   margin: 0 auto;
   max-width: 1200px;
