--- a/web/themes/saunacamp/sass/layouts/_main.scss
+++ b/web/themes/saunacamp/sass/layouts/_main.scss
@@ -4,3 +4,12 @@
   padding: 50px 0 150px;
   text-align: center;
 }
+
+.l-twitter-feed {
+  background-color: $main-color-1;
+  padding: 20px 0;
+  .twitter-timeline {
+    margin: 0 auto!important;
+    display: block!important;
+  }
+}
