Added dries block

--- a/web/themes/saunacamp/templates/page.html.twig
+++ b/web/themes/saunacamp/templates/page.html.twig
@@ -98,6 +98,14 @@
   </div>
 </main>
 
+<section class="l-dries">
+  <img src="{{ file_url('themes/saunacamp/images/sauna.jpg') }}">
+  <div class="l-wrapper">
+    <a href="https://twitter.com/Dries/status/469905571429117952">Last year even Dries said WTF!</a>
+  </div> 
+</section>
+
+
 {% if page.footer %}
   <footer role="l-footer">
     <div class="l-wrapper">
