--- a/web/themes/saunacamp/css/styles.css
+++ b/web/themes/saunacamp/css/styles.css
@@ -3,9 +3,33 @@ h1 {
   font-size: 2em;
 }
 
+a {
+  text-decoration: none;
+}
+
 body {
   font-family: 'Lato', sans-serif;
   font-size: 2.5em;
+}
+
+.l-dries {
+  background: #77ae40;
+}
+.l-dries img {
+  width: 110%;
+  height: auto;
+  transform: rotate(-5deg);
+  margin-left: -5%;
+  margin-right: -5%;
+  margin-top: -100px;
+}
+.l-dries .l-wrapper {
+  color: #FFFFFF;
+  padding: 200px 0;
+  text-align: center;
+}
+.l-dries .l-wrapper a {
+  color: #FFFFFF;
 }
 
 .l-header {
@@ -33,7 +57,7 @@ body {
 .l-main {
   background: #000000;
   color: #FFFFFF;
-  padding: 50px 0 150px;
+  padding: 70px 0 280px;
   text-align: center;
 }
 
