Some mofifications for twitter-feed

--- a/web/themes/saunacamp/css/styles.css
+++ b/web/themes/saunacamp/css/styles.css
@@ -62,8 +62,8 @@ body {
 }
 
 .l-twitter-feed {
-  background-color: #77ae40;
-  padding: 20px 0;
+  background-color: #000000;
+  padding: 150px 0;
 }
 .l-twitter-feed .twitter-timeline {
   margin: 0 auto !important;
