--- a/web/themes/saunacamp/sass/layouts/_header.scss
+++ b/web/themes/saunacamp/sass/layouts/_header.scss
@@ -5,6 +5,9 @@
 .l-header__left,
 .l-header__right {
   height: 70%;
+  @include breakpoint($wide) {
+    height: 95%;
+  }
   width: 50%;
   top: 0;
   position: absolute;
