--- a/web/themes/saunacamp/templates/page.html.twig
+++ b/web/themes/saunacamp/templates/page.html.twig
@@ -59,8 +59,8 @@
 #}
 <header role="banner" class="l-header">
   {% if logo %}
-    <a href="{{ front_page }}" title="{{ 'Home'|t }}" rel="home">
-      <img src="{{ logo }}" alt="{{ 'Home'|t }}"/>
+    <a href="{{ front_page }}" title="{{ 'Home'|t }}" rel="home" class="c-logo">
+      <img src="{{ logo }}" alt="{{ 'Home'|t }}" class="c-logo__image" />
     </a>
   {% endif %}
   <div class="l-header__left"> </div>
