--- a/web/themes/saunacamp/templates/page.html.twig
+++ b/web/themes/saunacamp/templates/page.html.twig
@@ -101,11 +101,12 @@
 <section class="l-dries">
   <img src="{{ file_url('themes/saunacamp/images/sauna.jpg') }}">
   <div class="l-wrapper">
-    <a href="https://twitter.com/Dries/status/469905571429117952">Last year even Dries said WTF!</a>
+    <a href="https://twitter.com/Dries/status/469905571429117952"><h2>{{ 'Last year even Dries said WTF!'|t }}</h2></a>
   </div> 
 </section>
 
 <div class="l-twitter-feed">
+    <h2>{{ 'Stay tuned for updates!'|t }}</h2>
     <a class="twitter-timeline" href="https://twitter.com/saunacampfi" data-widget-id="593468106875494403">Twiittejä käyttäjältä @saunacampfi</a>
     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 </div>
