--- a/web/themes/saunacamp/css/styles.css
+++ b/web/themes/saunacamp/css/styles.css
@@ -74,11 +74,16 @@ body {
 
 .l-twitter-feed {
   background-color: #000000;
-  padding: 150px 0;
+  color: #FFFFFF;
+  padding: 50px 0;
+  text-align: center;
 }
 .l-twitter-feed .twitter-timeline {
   margin: 0 auto !important;
   display: block !important;
+}
+.l-twitter-feed h2 {
+  padding-bottom: 10px;
 }
 
 .l-wrapper {
