--- a/web/themes/saunacamp/templates/page.html.twig
+++ b/web/themes/saunacamp/templates/page.html.twig
@@ -105,6 +105,15 @@
   </div> 
 </section>
 
+<section class="l-sponsors">
+  <div class="l-wrapper">
+      <h1>{{ 'Sponsors'|t }}</h1>
+      <p>{{ 'Interested in sponsoring?'|t }}</p>
+      <p>{{ 'We have an unlimited amount avalaible for the price of 500€.'|t }}</p>
+      <p>{{ 'For more details contact'|t }} <a href="mailto:lauri.eskola@gmail.com">lauri.eskola@gmail.com</a></p>
+  </div>
+</section>
+
 <div class="l-twitter-feed">
     <h2>{{ 'Stay tuned for updates!'|t }}</h2>
     <a class="twitter-timeline" href="https://twitter.com/saunacampfi" data-widget-id="593468106875494403">Twiittejä käyttäjältä @saunacampfi</a>
