Nitpicking the sponsors text

--- a/web/themes/saunacamp/templates/page.html.twig
+++ b/web/themes/saunacamp/templates/page.html.twig
@@ -109,8 +109,8 @@
   <div class="l-wrapper">
       <h1>{{ 'Sponsors'|t }}</h1>
       <p>{{ 'Interested in sponsoring?'|t }}</p>
-      <p>{{ 'We have an unlimited amount avalaible for the price of 500€.'|t }}</p>
-      <p>{{ 'For more details contact'|t }} <a href="mailto:lauri.eskola@gmail.com">lauri.eskola@gmail.com</a></p>
+      <p>{{ 'You can sponsor the event for the price of 500€.'|t }}</p>
+      <p>{{ 'For more details please contact'|t }} <a href="mailto:lauri.eskola@gmail.com">lauri.eskola@gmail.com</a></p>
   </div>
 </section>
 
