--- a/web/themes/saunacamp/templates/page.html.twig
+++ b/web/themes/saunacamp/templates/page.html.twig
@@ -114,6 +114,19 @@
   </div>
 </section>
 
+<section class="l-venue">
+  <div class="l-wrapper">
+    <h1>{{ 'Where?'|t }}</h1>
+    <p>{{ 'Venue is located in Ruoholahti approx. 10 minutes walk from metro station.'|t }}</p>
+    <p>{{ 'Tammasaarenkatu 7, Helsinki'|t }}</p>
+  </div>
+</section>
+
+<section class="l-google-maps">
+  <iframe frameborder="0" style="border:0;" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyClII51H625nvpKbTgdXF34ADMeXXadlMs&q=HTC+Helsinki+Oy,Helsinki+Finland">
+  </iframe>
+</section>
+
 <div class="l-twitter-feed">
     <h2>{{ 'Stay tuned for updates!'|t }}</h2>
     <a class="twitter-timeline" href="https://twitter.com/saunacampfi" data-widget-id="593468106875494403">Twiittejä käyttäjältä @saunacampfi</a>
