--- a/web/themes/saunacamp/templates/page.html.twig
+++ b/web/themes/saunacamp/templates/page.html.twig
@@ -105,9 +105,15 @@
   </div> 
 </section>
 
+<section class="l-sponsors-lift">
+  <div class="l-wrapper">
+    <h1>{{ 'Sponsors'|t }}</h1>
+    {{ page.sponsors }}
+  </div>
+</section>
+
 <section class="l-sponsors">
   <div class="l-wrapper">
-      <h1>{{ 'Sponsors'|t }}</h1>
       <p>{{ 'Interested in sponsoring?'|t }}</p>
       <p>{{ 'You can sponsor the event for the price of 500€.'|t }}</p>
       <p>{{ 'For more details please contact'|t }} <a href="mailto:lauri.eskola@gmail.com">lauri.eskola@gmail.com</a></p>
