Added sponsors thru an hack as img upload is broken on server

--- a/web/themes/saunacamp/css/styles.css
+++ b/web/themes/saunacamp/css/styles.css
@@ -123,6 +123,9 @@ body {
 }
 .l-sponsors-lift .views-row {
   float: left;
+  padding-right: 50px;
+  padding-bottom: 150px;
+  height: 250px;
 }
 
 .l-twitter-feed {
