--- a/web/themes/saunacamp/templates/page.html.twig
+++ b/web/themes/saunacamp/templates/page.html.twig
@@ -108,7 +108,20 @@
 <section class="l-sponsors-lift">
   <div class="l-wrapper">
     <h1>{{ 'Sponsors'|t }}</h1>
-    {{ page.sponsors }}
+    <div class="view-content">
+      <div class="views-row">
+        <a href="http://wunderkraut.fi" target="_blank"><img src="/themes/saunacamp/images/wunderkraut.svg" style="width: 250px;"/></a>
+      </div>
+      <div class="views-row">
+          <a href="http://druid.fi" target="_blank"><img src="/themes/saunacamp/images/druid.png" style="width: 250px;"/></a>
+      </div>
+      <div class="views-row">
+        <a href="http://siili.fi" target="_blank"><img src="/themes/saunacamp/images/siili.png" style="width: 250px;"/></a>
+      </div>
+      <div class="views-row">
+        <a href="http://kwd.fi" target="_blank"><img src="/themes/saunacamp/images/kwd.png" style="width: 250px;"/></a>
+      </div>
+    </div>
   </div>
 </section>
 
