--- a/web/themes/saunacamp/templates/page.html.twig
+++ b/web/themes/saunacamp/templates/page.html.twig
@@ -110,16 +110,16 @@
     <h1>{{ 'Sponsors'|t }}</h1>
     <div class="view-content">
       <div class="views-row">
-        <a href="http://wunderkraut.fi" target="_blank"><img src="/themes/saunacamp/images/wunderkraut.svg" style="width: 250px;"/></a>
+        <a href="http://wunderkraut.fi" target="_blank"><img src="/themes/saunacamp/images/wunderkraut.svg" /></a>
       </div>
       <div class="views-row">
-          <a href="http://druid.fi" target="_blank"><img src="/themes/saunacamp/images/druid.png" style="width: 250px;"/></a>
+          <a href="http://druid.fi" target="_blank"><img src="/themes/saunacamp/images/druid.png" /></a>
       </div>
       <div class="views-row">
-        <a href="http://siili.fi" target="_blank"><img src="/themes/saunacamp/images/siili.png" style="width: 250px;"/></a>
+        <a href="http://siili.fi" target="_blank"><img src="/themes/saunacamp/images/siili.png" /></a>
       </div>
       <div class="views-row">
-        <a href="http://kwd.fi" target="_blank"><img src="/themes/saunacamp/images/kwd.png" style="width: 250px;"/></a>
+        <a href="http://kwd.fi" target="_blank"><img src="/themes/saunacamp/images/kwd.png" /></a>
       </div>
     </div>
   </div>
