--- a/web/themes/saunacamp/css/styles.css
+++ b/web/themes/saunacamp/css/styles.css
@@ -119,13 +119,38 @@ body {
 
 .l-sponsors-lift .view-content {
   display: table;
-  margin: 0 auto;
+  width: 100%;
 }
 .l-sponsors-lift .views-row {
   float: left;
-  padding-right: 50px;
-  padding-bottom: 150px;
+  padding-right: 1%;
+  padding-bottom: 50px;
   height: 250px;
+  display: table;
+  width: 99%;
+}
+.l-sponsors-lift .views-row a {
+  display: table-cell;
+  vertical-align: middle;
+}
+.l-sponsors-lift .views-row img {
+  max-width: 250px;
+  width: 100%;
+  display: block;
+  margin: 0 auto;
+}
+.l-sponsors-lift .views-row:last-child {
+  padding-right: 0;
+}
+@media (min-width: 768px) {
+  .l-sponsors-lift .views-row {
+    width: 49%;
+  }
+}
+@media (min-width: 1024px) {
+  .l-sponsors-lift .views-row {
+    width: 24%;
+  }
 }
 
 .l-twitter-feed {
