--- a/web/themes/saunacamp/templates/page.html.twig
+++ b/web/themes/saunacamp/templates/page.html.twig
@@ -116,7 +116,7 @@
           <a href="http://druid.fi" target="_blank"><img src="/themes/saunacamp/images/druid.png" /></a>
       </div>
       <div class="views-row">
-        <a href="http://siili.fi" target="_blank"><img src="/themes/saunacamp/images/siili.png" /></a>
+        <a href="http://siili.fi" target="_blank"><img src="/themes/saunacamp/images/siili.jpg" /></a>
       </div>
       <div class="views-row">
         <a href="http://kwd.fi" target="_blank"><img src="/themes/saunacamp/images/kwd.png" /></a>
