--- a/web/themes/saunacamp/css/styles.css
+++ b/web/themes/saunacamp/css/styles.css
@@ -95,6 +95,30 @@ body {
 .l-main .views-row {
   float: left;
 }
+.l-main a {
+  color: #77ae40;
+}
+
+.l-presentations {
+  background-color: #77ae40;
+  padding: 150px 0;
+}
+.l-presentations h1 {
+  margin-top: 0;
+}
+.l-presentations h3 {
+  margin-bottom: 0;
+  text-align: center;
+}
+.l-presentations h2 {
+  text-align: center;
+}
+.l-presentations p {
+  margin-top: 0;
+}
+.l-presentations a {
+  color: #FFFFFF;
+}
 
 .l-sponsors {
   background-color: #000000;
@@ -114,6 +138,7 @@ body {
 }
 .l-sponsors p:last-child {
   margin-top: 0;
+  margin-bottom: 0;
   padding-bottom: 130px;
 }
 
