--- a/web/themes/saunacamp/templates/page.html.twig
+++ b/web/themes/saunacamp/templates/page.html.twig
@@ -135,13 +135,13 @@
 
 <section class="l-presentations">
   <div class="l-wrapper">
-    <h1>{{ 'Presentations'|t }}</h1>
+    <h1>{{ 'Sessions'|t }}</h1>
     <h3>Headless Drupal</h3>
     <p>By <a href="https://www.drupal.org/u/rteijeiro">Ruben Teijeiro (rteijeiro)</a></p>
     <h3>Virtual "talkoot"</h3>
     <p>By <a href="https://www.drupal.org/u/jannekalliola">Janne Kalliola</a></p>
 
-    <h2>Stay tuned, more coming soon!</h2>
+    <h2>Stay tuned, more is coming soon!</h2>
   </div>
 </section>
 
