--- a/web/themes/saunacamp/sass/components/_logo.scss
+++ b/web/themes/saunacamp/sass/components/_logo.scss
@@ -1,7 +1,26 @@
 .c-logo {
   display: block;
-  max-width: 1200px;
   margin: 0 auto;
+  max-width: 1200px;
+  position: relative;
+  z-index: 10;
+
+  &:after {
+    @include transform(rotate(45deg));
+    -moz-transform-origin: 0 0 0;
+    -ms-transform-origin: 0 0 0;
+    -webkit-transform-origin: 0 0 0;
+    transform-origin: 0 0 0;
+    background: white;
+    content: '';
+    height: 150%;
+    left: 50%;
+    position: absolute;
+    right: 0px;
+    top: 0px;
+    width: 155%;
+    z-index: -20;
+  }
 }
 
 .c-logo__image {
