--- a/web/themes/saunacamp/sass/layouts/_main.scss
+++ b/web/themes/saunacamp/sass/layouts/_main.scss
@@ -2,14 +2,19 @@
   background: $main-color-2;
   color: $text-inverse;
   padding: 70px 0 280px;
+  position: relative;
   text-align: center;
+  z-index: 10;
+
   .view-content {
     display: table;
     margin: 0 auto;
   }
+
   .views-row {
     float: left;
   }
+
   a {
     color: $green;
   }
