--- a/web/themes/saunacamp/css/styles.css
+++ b/web/themes/saunacamp/css/styles.css
@@ -34,6 +34,8 @@ body {
   margin-left: -5%;
   margin-right: -5%;
   margin-top: -100px;
+  z-index: 20;
+  position: relative;
 }
 .l-dries .l-wrapper {
   color: #FFFFFF;
