--- a/web/themes/saunacamp/sass/layouts/_dries.scss
+++ b/web/themes/saunacamp/sass/layouts/_dries.scss
@@ -9,6 +9,8 @@
     margin-left: -5%;
     margin-right: -5%;
     margin-top: -100px;
+    z-index: 20;
+    position: relative;
   }
   .l-wrapper {
     color: $text-inverse;
