added exove as sponsor

--- a/web/themes/saunacamp/css/styles.css
+++ b/web/themes/saunacamp/css/styles.css
@@ -165,6 +165,10 @@ body {
   display: table;
   width: 99%;
 }
+.l-sponsors-lift .views-row:nth-child(5) {
+  margin: 0 auto;
+  float: none;
+}
 .l-sponsors-lift .views-row a {
   display: table-cell;
   vertical-align: middle;
