--- a/web/themes/saunacamp/templates/page.html.twig
+++ b/web/themes/saunacamp/templates/page.html.twig
@@ -121,6 +121,9 @@
       <div class="views-row">
         <a href="http://kwd.fi" target="_blank"><img src="/themes/saunacamp/images/kwd.png" /></a>
       </div>
+        <div class="views-row">
+            <a href="http://exove.fi" target="_blank"><img src="/themes/saunacamp/images/exove.png" /></a>
+        </div>
     </div>
   </div>
 </section>
