--- a/web/themes/saunacamp/templates/page.html.twig
+++ b/web/themes/saunacamp/templates/page.html.twig
@@ -143,6 +143,8 @@
     <p>By <a href="https://www.drupal.org/u/rteijeiro">Ruben Teijeiro (rteijeiro)</a></p>
     <h3>Virtual "talkoot"</h3>
     <p>By <a href="https://www.drupal.org/u/jannekalliola">Janne Kalliola</a></p>
+    <h3>An introduction to object-oriented programming</h3>
+    <p>By <a href="https://www.drupal.org/u/xano">Bart Feenstra (Xano)</a></p>
 
     <h2>Stay tuned, more is coming soon!</h2>
   </div>
