--- a/web/themes/saunacamp/css/styles.css
+++ b/web/themes/saunacamp/css/styles.css
@@ -109,6 +109,16 @@ body {
 .l-main .view-header a:hover {
   background: #446325;
 }
+.l-main span.secret:after {
+  content: "spirits";
+  font-size: 0;
+}
+.l-main span.secret:hover {
+  font-size: 0;
+}
+.l-main span.secret:hover:after {
+  font-size: 40px;
+}
 
 .l-presentations {
   background-color: #77ae40;
