Added PHP7 presentation

--- a/web/themes/saunacamp/templates/page.html.twig
+++ b/web/themes/saunacamp/templates/page.html.twig
@@ -147,8 +147,8 @@
     <p>By <a href="https://www.drupal.org/u/xano">Bart Feenstra (Xano)</a></p>
     <h3>Frontend for Backenders</h3>
     <p>By <a href="https://www.drupal.org/u/lauriii">Lauri Eskola (lauriii)</a></p>
-
-    <h2>Stay tuned, more is coming soon!</h2>
+    <h3>The Long March of PHP 7: To adoption... and beyond!  </h3>
+    <p>by Mikko Forsström (Pekkis)</p>
   </div>
 </section>
 
