Added sprint location marker to google maps using Google My Map service.

--- a/web/themes/saunacamp/templates/page.html.twig
+++ b/web/themes/saunacamp/templates/page.html.twig
@@ -161,8 +161,8 @@
 </section>
 
 <section class="l-google-maps">
-  <iframe frameborder="0" style="border:0;" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyClII51H625nvpKbTgdXF34ADMeXXadlMs&q=HTC+Helsinki+Oy,Helsinki+Finland">
-  </iframe>
+  {# This map is maintained by Miksu, ask for edit credentials if needed #}
+  <iframe frameborder="0" style="border:0;" src="https://www.google.com/maps/d/embed?mid=zpGfWQippyrQ.kvcfZIbzbQlE"></iframe>
 </section>
 
 <div class="l-twitter-feed">
