Added location for sprints

--- a/web/themes/saunacamp/templates/page.html.twig
+++ b/web/themes/saunacamp/templates/page.html.twig
@@ -155,8 +155,11 @@
 <section class="l-venue">
   <div class="l-wrapper">
     <h1>{{ 'Where?'|t }}</h1>
+    <h2>{{ 'Sessions:'| }}</h2>
     <p>{{ 'Venue is located in Ruoholahti approx. 10 minutes walk from metro station.'|t }}</p>
     <p>{{ 'Tammasaarenkatu 7, Helsinki'|t }}</p>
+    <h2>{{ 'Sprints:'|t }}</h2>
+    <p>{{ 'Lapinlahdenkatu 2, Helsinki'|t }}</p>
   </div>
 </section>
 
