--- a/web/themes/saunacamp/css/styles.css
+++ b/web/themes/saunacamp/css/styles.css
@@ -217,6 +217,10 @@ body {
   padding-bottom: 10px;
 }
 
+.l-venue h2 {
+  text-align: center;
+}
+
 .l-wrapper {
   margin: 0 auto;
   max-width: 1200px;
